--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -1,1 +1,461 @@
+.body {
+  margin: 0 auto;
+  padding: 0;
+  font-family: "Raleway", sans-serif;
+}
 
+.gallery {
+  height: 1536px;
+  background-color: #ffe92f;
+  background-size: 100%;
+
+  .gallery-item {
+    margin-left: auto;
+    margin-right: auto;
+
+    .gallery-top {
+      padding-top: 47px;
+      margin-left: auto;
+      margin-right: auto;
+      width: 600px;
+      height: 200px;
+      text-align: center;
+
+      .gallery-title {
+        font-size: 90px;
+        line-height: 27px;
+        color: #262626;
+        font-weight: 700;
+      }
+      .gallery-text {
+        font-size: 17px;
+        line-height: 27px;
+      }
+    }
+    .gallery-button {
+      margin-top: 135px;
+      background-color: #5585a2;
+    }
+    .gallery-button__form {
+      display: flex;
+      justify-content: center;
+    }
+  }
+}
+
+.gallery-block {
+  box-sizing: border-box;
+  height: 980px;
+  width: 1170px;
+  padding-top: 100px;
+  display: flex;
+}
+
+.gallery-img1 {
+  height: 520px;
+  background-color: #00c4c4;
+  position: relative;
+  filter: drop-shadow(0px 4px 5px rgba(0, 0, 0, 0.5));
+
+  img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+}
+.gallery-img2 {
+  width: 570px;
+  height: 400px;
+  background-color: #00c4c4;
+  position: absolute;
+  margin-top: 550px;
+  filter: drop-shadow(0px 2px 2.5px rgba(0, 0, 0, 0.5));
+
+  img {
+    width: 570px;
+    height: 400px;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+}
+.gallery-img3 {
+  width: 370px;
+  height: 260px;
+  background-color: #00c4c4;
+  position: absolute;
+  margin-left: 800px;
+  filter: drop-shadow(0px 2px 2.5px rgba(0, 0, 0, 0.5));
+
+  img {
+    width: 370px;
+    height: 260px;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+}
+.gallery-img4 {
+  width: 370px;
+  height: 250px;
+  background-color: #00c4c4;
+  position: absolute;
+  margin-left: 800px;
+  margin-top: 270px;
+  filter: drop-shadow(0px 2px 2.5px rgba(0, 0, 0, 0.5));
+
+  img {
+    width: 370px;
+    height: 250px;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+}
+.gallery-img5 {
+  width: 570px;
+  height: 400px;
+  background-color: #00c4c4;
+  margin-left: 600px;
+  position: absolute;
+  margin-top: 550px;
+  filter: drop-shadow(0px 2px 2.5px rgba(0, 0, 0, 0.5));
+
+  img {
+    width: 570px;
+    height: 400px;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .gallery-block {
+    max-width: 950px;
+    padding-left: 15px;
+    padding-right: 15px;
+    justify-content: flex-start;
+    display: flex;
+  }
+  .gallery-img1 {
+    height: 420px;
+    background-color: #00c4c4;
+    position: relative;
+    filter: drop-shadow(0px 4px 5px rgba(0, 0, 0, 0.5));
+
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .gallery-img2 {
+    height: 300px;
+    width: 450px;
+    background-color: #00c4c4;
+    position: absolute;
+    margin-top: 450px;
+    filter: drop-shadow(0px 2px 2.5px rgba(0, 0, 0, 0.5));
+
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .gallery-img3 {
+    width: 290px;
+    height: 200px;
+    background-color: #00c4c4;
+    position: absolute;
+    margin-left: 650px;
+    filter: drop-shadow(0px 2px 2.5px rgba(0, 0, 0, 0.5));
+
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .gallery-img4 {
+    width: 290px;
+    height: 200px;
+    background-color: #00c4c4;
+    position: absolute;
+    margin-left: 650px;
+    margin-top: 220px;
+    filter: drop-shadow(0px 2px 2.5px rgba(0, 0, 0, 0.5));
+
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .gallery-img5 {
+    height: 300px;
+    width: 450px;
+    background-color: #00c4c4;
+    margin-left: 490px;
+    position: absolute;
+    margin-top: 450px;
+    filter: drop-shadow(0px 2px 2.5px rgba(0, 0, 0, 0.5));
+
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+@media screen and (max-width: 1024px) {
+  .gallery-block {
+    max-width: 700px;
+    padding-left: 15px;
+    padding-right: 15px;
+    justify-content: space-around;
+    display: flex;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .gallery-img1 {
+    height: 200px;
+    background-color: #00c4c4;
+    position: relative;
+    filter: drop-shadow(0px 4px 5px rgba(0, 0, 0, 0.5));
+
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .gallery-img2 {
+    height: 200px;
+    width: 300px;
+    background-color: #00c4c4;
+    position: absolute;
+    margin-top: 210px;
+    filter: drop-shadow(0px 2px 2.5px rgba(0, 0, 0, 0.5));
+
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .gallery-img3 {
+    height: 200px;
+    width: 300px;
+    background-color: #00c4c4;
+    position: absolute;
+    margin-top: 420px;
+    margin-right: auto;
+    margin-left: auto;
+    filter: drop-shadow(0px 2px 2.5px rgba(0, 0, 0, 0.5));
+
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .gallery-img4 {
+    height: 200px;
+    width: 300px;
+    background-color: #00c4c4;
+    position: absolute;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 630px;
+    filter: drop-shadow(0px 2px 2.5px rgba(0, 0, 0, 0.5));
+
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .gallery-img5 {
+    height: 200px;
+    width: 300px;
+    background-color: #00c4c4;
+    margin-right: auto;
+    margin-left: auto;
+    position: absolute;
+    margin-top: 840px;
+    filter: drop-shadow(0px 2px 2.5px rgba(0, 0, 0, 0.5));
+
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .gallery-button__form {
+    display: flex;
+    justify-content: center;
+    margin-top: 60px;
+  }
+}
+@media screen and (max-width: 640px) {
+  .gallery-top {
+    padding-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 300px;
+    height: 200px;
+    text-align: center;
+  }
+
+  .gallery-title {
+    font-size: 20px;
+    line-height: 27px;
+    color: #262626;
+    font-weight: 700;
+  }
+  .gallery-text {
+    font-size: 10px;
+    line-height: 27px;
+  }
+  .gallery-block {
+    max-width: 300px;
+    padding-left: 15px;
+    padding-right: 15px;
+    justify-content: space-around;
+    display: flex;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .gallery-img1 {
+    height: 200px;
+    background-color: #00c4c4;
+    position: relative;
+    filter: drop-shadow(0px 4px 5px rgba(0, 0, 0, 0.5));
+
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .gallery-img2 {
+    height: 200px;
+    width: 270px;
+    background-color: #00c4c4;
+    position: absolute;
+    margin-top: 210px;
+    filter: drop-shadow(0px 2px 2.5px rgba(0, 0, 0, 0.5));
+
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .gallery-img3 {
+    height: 200px;
+    width: 270px;
+    background-color: #00c4c4;
+    position: absolute;
+    margin-top: 420px;
+    margin-right: auto;
+    margin-left: auto;
+    filter: drop-shadow(0px 2px 2.5px rgba(0, 0, 0, 0.5));
+
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .gallery-img4 {
+    height: 200px;
+    width: 270px;
+    background-color: #00c4c4;
+    position: absolute;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 630px;
+    filter: drop-shadow(0px 2px 2.5px rgba(0, 0, 0, 0.5));
+
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .gallery-img5 {
+    height: 200px;
+    width: 270px;
+    background-color: #00c4c4;
+    margin-right: auto;
+    margin-left: auto;
+    position: absolute;
+    margin-top: 840px;
+    filter: drop-shadow(0px 2px 2.5px rgba(0, 0, 0, 0.5));
+
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .gallery-button__form {
+    display: flex;
+    justify-content: center;
+    margin-top: 60px;
+  }
+}
+.subscribe {
+  height: 500px;
+  background: url(/assets/subscribe_bg.png);
+  background-repeat: no-repeat;
+  background-size: center;
+  background-color: #ffffff;
+
+  .subscribe-item {
+    .subscribe-block {
+      width: 572px;
+      height: 105px;
+      padding-top: 115px;
+      padding-bottom: 22px;
+
+      .subscribe-title {
+        font-size: 40px;
+        line-height: 27px;
+        color: #262626;
+        font-weight: 700;
+      }
+
+      .subscribe-text {
+        font-size: 17px;
+        line-height: 27px;
+        color: #262626;
+        font-weight: 300;
+      }
+    }
+    .subscribe-form {
+      padding-top: 35px;
+
+      .subscribe-input {
+        width: 569px;
+        height: 54px;
+      }
+
+      .subscribe-button {
+        margin-left: 20px;
+        margin-top: 20px;
+        font-size: 20px;
+        line-height: 27px;
+        width: 170px;
+        height: 55px;
+        background: #95b92b;
+        color: #ffffff;
+        border: 1px solid #95b92b;
+        filter: drop-shadow(0px 2px 2.5px rgba(0, 0, 0, 0.5));
+      }
+    }
+  }
+}
