--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -56,7 +56,7 @@
     .blog_pictures-1 {
         width: 370px;
         height: 310px;
-        background: url(/assets/blog_fresh.svg) no-repeat left;
+        background: url(assets/blog_fresh.svg) no-repeat left;
         position: relative;
         .blog__gradient1 {
             position: absolute;
@@ -117,7 +117,7 @@
 .blog_pictures-2 {
     width: 370px;
     height: 310px;
-    background: url(/assets/blog_soup.svg) no-repeat center bottom;
+    background: url(assets/blog_soup.svg) no-repeat center bottom;
     position: relative;
     .blog__gradient2 {
         position: absolute;
@@ -172,7 +172,7 @@
 .blog_pictures-3 {
     width: 370px;
     height: 310px;
-    background: url(/assets/blog_raspberry.svg) no-repeat center;
+    background: url(assets/blog_raspberry.svg) no-repeat center;
     position: relative;
     .blog_gradient3 {
         position: absolute;
@@ -256,7 +256,7 @@
     height: 865px;
     margin-left: auto;
     margin-right: auto;
-    background: url(/assets/contact_background_3.png) repeat top;
+    background: url(assets/contact_background_3.png) repeat top;
     image-rendering: optimizeQuality;
     background-size: 100%;
     .contact__item {
