--- a/footer.css
+++ b/footer.css
@@ -259,7 +259,7 @@
     height: 865px;
     margin-left: auto;
     margin-right: auto;
-    background: url(assets/contact_background_3.png) repeat top;
+    background: url(contact_background_3.png) repeat top;
     image-rendering: optimizeQuality;
     background-size: 100%;
 }
