--- a/header.css
+++ b/header.css
@@ -23,7 +23,6 @@
     max-width: 1500px;
     width: 100%;
     margin: 0 auto auto;
-
     background-image: url('assets/header-bg.png');
     background-size: cover;
 }
@@ -50,7 +49,6 @@
 .fresh-life___nav-links {
     max-width: 570px;
     width: 100%;
-
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -79,7 +77,6 @@
 
 .fresh-life___nav-link a {
     text-decoration: none;
-
     font-size: 16px;
     line-height: 25px;
     color: #262626;
@@ -95,7 +92,6 @@
     margin-top: 0;
     margin-bottom: 0;
     padding-top: 237px;
-
     font-size: 60px;
     line-height: 25px;
     color: #262626;
@@ -106,7 +102,6 @@
 .fresh-life__block-description {
     margin-top: 45px;
     margin-bottom: 0;
-
     width: 400px;
     height: 69px;
     font-size: 17px;
@@ -119,15 +114,19 @@
 .fresh-life__block-btn {
     width: 200px;
     height: 55px;
-    margin-top: 40px;   
-
-    filter: drop-shadow(0px 2px 2.5px rgba(0,0,0,0.5));
+    margin-top: 40px;
+    filter: drop-shadow(0px 10px 10px rgba(0,0,0,0.5));
     background-color: #ff6033;
-
+    /* box-shadow: #262626; */
     border: none;
     border-radius: 0;
-
     cursor: pointer;
+}
+
+.fresh-life__block-btn:hover {
+    background: #5585a2;
+    color: #00afaf;
+    box-shadow: 0 10px 10px #00a09f;
 }
 
 .fresh-life__block-btn span {
@@ -146,7 +145,6 @@
 .fresh-life__mouse-img img {
     height: 40px;
     width: 24px;
-
     padding-top: 75px;
 }
 
@@ -168,7 +166,6 @@
 .about-text {
     margin-top: 200px;
     margin-left: 70px;
-    
     height: 300px;
     display: flex;
     flex-direction: column;
@@ -177,7 +174,6 @@
 .about-text__block-title {
     margin: 0;
     margin-bottom: 35px;
-
     font-size: 90px;
     line-height: 27px;
     color: #ffffff;
@@ -214,14 +210,10 @@
 .our-services__nav-btn {
     height: 100px;
     width: 400px;
-
     padding: 0;
     margin-bottom: 20px;
-
     border: 0;
-
     display: flex;
-
     filter: drop-shadow(0px 4px 5px rgba(0,0,0,0.5));
     cursor: pointer;
 }
@@ -229,16 +221,13 @@
 .our-services__nav-btn-name {
     height: 100px;
     width: 300px;
-
     display: flex;
     align-items: center;
     justify-content: center;
-
     font-size: 20px;
     line-height: 27px;
     color: #262626;
     font-weight: 700;
-
     border-right: 1px solid #9d9d9d;
 }
 
@@ -250,10 +239,8 @@
 .our-services_text {
     height: 520px;
     width: 550px;
-
     margin-top: 105px;
     margin-left: 120px;
-
     background-image: url("assets/our-services_tomato.png");
     background-repeat: no-repeat;
     background-position: center;
@@ -261,7 +248,6 @@
 
 .our-services__block-title {
     padding-top: 170px;
-
     font-size: 90px;
     line-height: 27px;
     color: #ffffff;
