--- a/body.css
+++ b/body.css
@@ -113,6 +113,8 @@
 .gallery-button {
     margin-left: 650px;
     margin-top: 135px;
+    background: #5585a2;
+    border:none;
     width: 200px;
     height: 55px;
     font-size: 20px;
@@ -120,8 +122,15 @@
     color: #ffffff;
     font-weight: 300;
     font-family: "Raleway";
-    filter: drop-shadow(0px 2px 2.5px rgba(0, 0, 0, 0.5));
-    background-color: #5585a2;
+    filter: drop-shadow(0px 10px 10px rgba(0, 0, 0, 0.5));
+    /* background-color: #5585a2; */
+    cursor: pointer;
+}
+
+.gallery-button:hover {
+    color:#b07cf7;
+    background: #b07cf7;
+    box-shadow: 0 10px 10px #b07cf7;
 }
 
 .subscribe {
@@ -169,8 +178,16 @@
     line-height: 27px;
     width: 170px;
     height: 55px;
-    background: #95b92b;
+    background-color: #95b92b;
     color: #ffffff;
-    border: 1px solid #95b92b;
-    filter: drop-shadow(0px 2px 2.5px rgba(0, 0, 0, 0.5));
+    border: none;
+    box-shadow: 0px 10px 10px #dfdf33;
+    /* filter: drop-shadow(0px 10px 10px rgba(0, 0, 0, 0.5)); */
+    cursor:pointer;
+}
+
+.subscribe-button:hover {
+    color:#b07cf7;
+    background-color: #b07cf7;
+    box-shadow: 0 10px 10px #b07cf7;
 }
