--- a/footer.css
+++ b/footer.css
@@ -89,14 +89,12 @@
     background-color: rgb(79, 85, 94);
     background-color: rgba(26, 46, 77, 0.4);
 }
-
 .blog_now-1 {
     font-size: 22px;
     line-height: 25px;
     color: #ffffff;
     position: relative;
 }
-
 .blog_about_pictures-1 {
     width: 370px;
     height: 80px;
@@ -134,7 +132,6 @@
     background: linear-gradient(to top, #0a0908 35%, #c2c2c6 40%, #374255 80%);
     opacity: 0.3;
 }
-
 .blog_14-2 {
     position: absolute;
     width: 60px;
@@ -241,17 +238,20 @@
     color: #ffffff;
     font-weight: 300;
     text-align: center;
-    border: 1px;
+    filter: drop-shadow(0px 10px 10px rgba(0, 0, 0, 0.5));
+    /* box-shadow: #262626; */
+    /* border: 1px; */
     cursor: pointer;
+    
 }
-
 .blog__button:hover {
     background: #5585a2;
+    box-shadow: 0 10px 10px #262626 ;
 }
 
 .blog__button:active {
     background: #5585a2;
-    box-shadow: 0 3px #5585a2 inset;
+    box-shadow: 0 3px #b07cf7 inset;
 }
 
 /* contact box */
@@ -300,7 +300,6 @@
     margin-right: auto;
     margin-top: 45px;
 }
-
 .form__list {
     height: 445px;
     margin-top: 45px;
@@ -338,7 +337,6 @@
     resize: vertical;
     border-width: 0px 0px 0px 0px;
 }
-
 .form-input:focus {
     background-color: #00c4c4;
     border-left-color: #355b82;
@@ -356,13 +354,11 @@
     width: 485px;
     outline: none;
 }
-
 .contact__adress {
     width: 330px;
     height: 165px;
     margin-top: 45px;
 }
-
 .adress-title {
     height: 5px;
     margin-top: 0;
@@ -371,7 +367,6 @@
     color: #262626;
     font-weight: 700;
 }
-
 .adress-description {
     height: 14px;
     font-size: 20px;
@@ -385,6 +380,7 @@
     max-width: 100%;
     background: #262626;
 }
+
 .footer__container {
     height: 90px;
     max-width: 1170px;
