--- a/footer.css
+++ b/footer.css
@@ -240,11 +240,12 @@
     text-align: center;
     filter: drop-shadow(0px 10px 10px rgba(0, 0, 0, 0.5));
     /* box-shadow: #262626; */
-    /* border: 1px; */
+    border: none;
     cursor: pointer;
     
 }
 .blog__button:hover {
+    color: #f72b3b;
     background: #5585a2;
     box-shadow: 0 10px 10px #262626 ;
 }
